--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/IMG_2066-2.webp" alt="" class="img-fluid rounded-circle vishnu">
+        <img src="assets/img/IMG_2047 (1) (1) (1).webp" alt="" class="img-fluid rounded-circle vishnu">
         <h1 class="text-light"><a href="index.html">Vishnu P R</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
